2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix UFS1 big file support.

	* grub-core/fs/ufs.c (INODE): Removed.
	(INODE_SIZE): Always use 64-bit byte-swap since size field is always
	64-bit.
	(INODE_MODE): Simplify.
	(grub_ufs_inode): Use uint64_t for size and not int64_t.
	(grub_ufs_lookup_symlink): Don't use INODE.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix minixfs with non-power-of-two blocks since it's supported by minix.

	* grub-core/fs/minix.c (GRUB_MINIX_ZONESZ): Use block_size.
	(grub_minix_data): Replace log_block_size with block_size.
	(grub_minix_read_file): Use block_size but avoid 64-bit division.
	(grub_minix_mount): Fill block_size.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta5.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix wrapped HFS+ handling.

	* grub-core/fs/fshelp.c (grub_fshelp_read_file): New argument
	blocks_start. All users updated.
	* grub-core/fs/hfsplus.c (grub_hfsplus_read_block): Don't add
	wrapping offset.
	(grub_hfsplus_read_file): Pass embedding offset to fshelp_read_file.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix long symlinks on reiserfs.

	* grub-core/fs/reiserfs.c (grub_fshelp_node): New field size.
	(grub_reiserfs_read_symlink): Use grub_reiserfs_read_real.
	(grub_reiserfs_iterate_dir): Save size for non-directories.
	(grub_reiserfs_open): Don't reread stat block as we already know the
	size.
	(grub_reiserfs_read): Split into...
	(grub_reiserfs_read_real): ... and ...
	(grub_reiserfs_read): ...this.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix non-indexed JFS.

	* grub-core/fs/jfs.c (grub_jfs_sblock): New field flags.
	(grub_jfs_data): New field namecomponentlen.
	(grub_jfs_mount): Fill namecomponentlen.
	(grub_jfs_getent): Use namecomponentlen rather than hardcoded 11.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/yylex.l: Ugly fix for "\\\n ".